--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<title>My Favorite Pizza</title>
+<title>My Favorite Food</title>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
 
@@ -16,15 +16,15 @@
 
 <div class="pageContainer">
   <div class="imageContainer"> 
-    <img src="images/pizza.jpg" alt="Pizza with pepperoni and cheese." /> 
+    <img src="images/sushi.jpeg" alt="Sushi Roll." /> 
   </div>
   <div class="textContainer">
     <h1>Pizza!</h1>
-    <p>My Favorite Toppings: </p>
+    <p>My Favorite Rolls: </p>
     <ul>
-      <li>Pepperoni</li>
-      <li>Mozzarella Cheese</li>
-      <li>Mushrooms</li>
+      <li>Spicy Tuna</li>
+      <li>Red Dragon</li>
+      <li>Cherry Blossom</li>
     </ul>
   </div>
 </div>
