Changed image and title to sushi

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <img src="images/sushi.jpeg" alt="Sushi Roll." /> 
   </div>
   <div class="textContainer">
-    <h1>Pizza!</h1>
+    <h1>Sushi!</h1>
     <p>My Favorite Rolls: </p>
     <ul>
       <li>Spicy Tuna</li>
